syntax = "proto3";

package push;
option go_package = "/;push";

message OnDelay{
  int64 StartTime = 1;
}