syntax = "proto3";

package push;
option go_package = "/;push";

message OnExit{
  uint32 PID = 1;
}
