syntax = "proto3";

package push;
option go_package = "/;push";

message OnOutOfView{
  uint32 PID = 1;
}